# Efficient-RANSAC-for-Point-Cloud-Shape-Detection

./: CMakeLists.txt  LevMarFitting.h  README.md  main.cpp  solve.cpp
GfxTL/: VectorXD.h
